--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'perl bunlder, inspired by ruby bundler'
+abstract: 'This is CPANPLUS pluggin. Provides interface to CPAN::Repo server'
 author:
   - 'Alexey Melezhik / melezhik@gmail.com'
 build_requires: {}
@@ -15,10 +15,10 @@ name: CPANPLUS-Shell-Default-Plugins-Repo
 provides:
   CPANPLUS::Shell::Default::Plugins::Repo:
     file: lib/CPANPLUS/Shell/Default/Plugins/Repo.pm
-    version: v0.0.1
+    version: v0.0.2
 requires:
   Test::More: 0
   version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.0.1
+version: v0.0.2
